Entity, ef settings and migration added

--- a/PersonalDevelopmentAssistant/PersonalDevelopmentAssistant/appsettings.json
+++ b/PersonalDevelopmentAssistant/PersonalDevelopmentAssistant/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-PersonalDevelopmentAssistant-12e16819-def1-45d6-8a0a-204db74b25f6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=PersonalDevelopmentAssistant;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
